# rl4fisheries

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: run-tests.yml
hyperpars/noisy_obs/long-fixed/: fixed_policy_UM1.yml  fixed_policy_UM2.yml  fixed_policy_UM3.yml
notebooks/: 1-pop-dynamics.ipynb  compare-solutions.ipynb  optimal-fixed-policy.ipynb
notebooks/experimenting/: aftermath.ipynb
notebooks/for_generating_results/: 4_episode_plots.ipynb
notebooks/for_results/: 1_fp_skopt.ipynb  2_reward_distr.ipynb  3_policy_plots.ipynb
notebooks/no-rescaling/: avg_obs.ipynb
paper/: fishery_refs.bib  make.sh  rl4fisheries.tex
scripts/: train.py  train_rl_algos.sh  tune.py  tune_fixed_policies.sh
src/rl4fisheries/: __init__.py  cautionary_rule.py  msy.py  quick_tests.ipynb
src/rl4fisheries/agents/: cautionary_rule.py  const_esc.py  msy.py  unit_interface.py
src/rl4fisheries/envs/: asm_anger.py  asm_env.py  asm_esc.py  asm_fns.py  asm_mv_avg.py  fs_asm_env.py
src/rl4fisheries/utils/: sb3.py
tests/: test_agents.py
