[project]
name = "rl4fisheries"
version = "1.0.0"

dependencies = ["gymnasium",
                "numpy",
                "matplotlib",
                "typing",
                "polars",
                "tqdm",
                "itertools"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "stable_baselines3"]
